# pelican-obsidian-callouts

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml  publish.yml
pelican/plugins/obsidian_callouts/: __init__.py  obsidian_callouts.py  test_obsidian_callouts.py
src/pelican/plugins/obsidian_callouts/: __init__.py
tests/: test_callouts.py
