[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pelican-obsidian-callouts"
version = "0.1.0"
description = "Pelican plugin: render Obsidian-style callouts from Markdown blockquotes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["pelican", "plugin", "obsidian", "callouts", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pelican>=4.5",
]

[project.urls]
Homepage = "https://github.com/tclancy/pelican-obsidian-callouts"
Repository = "https://github.com/tclancy/pelican-obsidian-callouts"
Issues = "https://github.com/tclancy/pelican-obsidian-callouts/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pelican"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pelican.plugins.obsidian_callouts --cov-report=term-missing"

[tool.coverage.run]
source = ["pelican.plugins.obsidian_callouts"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "C90"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "pelican[markdown]>=4.11.0",
]
